# claude-agent

./: .gitignore  LICENSE  Makefile  README.md  claude.json  crush.json  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  DEVELOPMENT.md  README.md  REQUIREMENTS.md  ROADMAP.md  SKILL.md  TESTING.md  tools.md
scripts/: __init__.py  agent.py  cmd.py  compat.py  config.py  context.py  hooks.py  integration.py  llm_pricing.py  lsp.py  lsp_tool.py  permission.py  plan_mode.py  plugins.py  preapproved.py  run.py  sshd.py  start_web.py  system_prompt.py  test_all_tools.py  tool.py  tools.py  tools_advanced.py  web_cache.py  web_server.py  web_tools.py
scripts/bootstrap/: __init__.py  init.py  model.py
scripts/cli/: __init__.py  main.py  print.py
scripts/compact/: __init__.py  auto_compact.py  compact_manager.py  context_collapse.py  message_scorer.py  micro_compact.py  reactive_compact.py  snip_compact.py  token_budget.py  token_counter.py
scripts/coordinator/: __init__.py  constants.py  mailbox.py  team.py  worker.py
scripts/hooks/: __init__.py  agent_hook.py  condition.py  enhanced.py  http_hook.py  prompt_hook.py
scripts/mcp/: README.md  __init__.py  example.mcp.json  mcp_client.py  mcp_config.py  mcp_manager.py  (+4 more)
tests/: test_advanced_tools.py  test_agent.py  test_compact.py  test_coordinator.py  test_hooks.py  test_lsp.py  test_mcp.py  test_memory.py  test_multi_agent.py  test_multi_agent_phases.py  test_plan.py  test_security.py  test_server.py  test_skill.py  test_subagent.py  test_tools.py  test_transports.py  test_worktree.py
web/: index.html
(+96 files in other folders)
